--- a/Practicing RMarkdown with Github.Rmd
+++ b/Practicing RMarkdown with Github.Rmd
@@ -2,7 +2,7 @@
 title: "Practicing RMarkdown with Github"
 author: "Gabriel Crone"
 date: "`r Sys.Date()`"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
